color in spanish style.css

--- a/style.css
+++ b/style.css
@@ -1,25 +1,33 @@
-ol {
-    margin-left: -40px;
-    margin-top: -20px;
-    list-style-position: inside;
+h2 {
+    font-weight: bold;
 }
 
-p {
+.color-title {
+    font-weight: normal;
+}
+
+
+img {
+    width: 200px;
+    height: 200px;
+}
+
+#red {
     color: red;
 }
 
-.note {
-    font-size: 20px;
-}
-
-#id-selector-demo {
-    color: green;
-}
-
-li[value ="4"] {
+#blue {
     color: blue;
 }
 
-*{
-    text-align: center;
+#orange {
+    color: orange;
+}
+
+#green {
+    color: green;
+}
+
+#yellow {
+    color: yellow;
 }
